# mseed3-utils

./: CMakeLists.txt  README.md
cmake/: AddSources.cmake  FindMSEED.cmake
libsrc/: CMakeLists.txt
share/json_schemas/: ExtraHeaders-FDSN.schema.json  ExtraHeaders-Manufacturer123.schema.json  ExtraHeaders-OperatorXYZ.schema.json  all-schemas.github.json
share/json_test_data/: ExtraHeader-FDSN-EV.json  ExtraHeader-FDSN-TC-Man-Oper.json  ExtraHeader-FDSN-TQ-EV-TC-Man-Oper.json  ExtraHeader-FDSN-TQ-EV-TC.json  ExtraHeader-Full_FDSN.json  ExtraHeader-Full_FDSN_Plus_ISTI.json  ExtraHeader-Manu.json  ExtraHeader-Manu_InvalidTest.json  ExtraHeader-Oper-Manu.json  ExtraHeader-Operator.json  ExtraHeader-Operator_InvalidTest.json
share/reference_datasets/: reference-baseline-record-ascii.xseed  reference-baseline-record-sinusoid-steim2.xseed  reference-baseline-record-sinusoid-steim2_EH-FDSN-Full.xseed  reference-baseline-record-sinusoid-steim2_EH-FDSN-TQ-ED-TC-Oper-Manu.xseed  reference-baseline-record-sinusoid-steim2_EH-FDSN-TQ-ED-TC.xseed  reference-baseline-record-sinusoid-steim2_EH-FDSN-TQ-Oper-Manu.xseed  reference-baseline-record-sinusoid_int16.xseed
src/: .clang-format  CMakeLists.txt
src/mseed2json/: CMakeLists.txt  mseed2json_config.h.in  mseed2json_main.c
src/mseed2text/: CMakeLists.txt  mseed2text_config.h.in  mseed2text_main.c
src/mseed3-common/: CMakeLists.txt  array.h  cat_strings.c  cmd_opt.h  constants.h  display_help.c  display_version.c  expand_array.c  file_exists.c  file_length.c  files.h  generate_getop_options.c  get_dirname.c  mseed3_string.h  regular_file.c  unix_functions_for_windows.c
src/mseed3-json/: CMakeLists.txt  mseed3-json_config.h.in  mseed3-json_main.c
src/mseed3-text/: CMakeLists.txt  mseed3-text_config.h.in  mseed3-text_main.c
src/mseed3-validator/: CMakeLists.txt  check_extra_headers.c  check_file.c  check_header.c  check_identifier.c  mseed3-validator_config.h.in  mseed3-validator_main.c  parse_extra_options.c  validator.h  warnings.h
src/xseed-common/: CMakeLists.txt  array.h  buffer_to_number.c  cat_strings.c  cmd_opt.h  config.h.in  constants.h  display_help.c  display_version.c  expand_array.c  file_exists.c  file_length.c  files.h  generate_getop_options.c  get_dirname.c  regular_file.c  unix_functions_for_windows.c  vcs_getopt.h  xseed_string.h
src/xseed-validator/: CMakeLists.txt  check_extra_headers.c  check_file.c  check_header.c  check_identifier.c  check_payload_text.c  check_payloads.c  main.c  parse_extra_options.c  parse_warn_options.c  validator.h  warnings.h  xseed-validator_config.h.in  xseed-validator_main.c
src/xseed2json/: CMakeLists.txt  main.c  xseed2json_config.h.in  xseed2json_main.c
src/xseed2text/: CMakeLists.txt  main.c  xseed2text_config.h.in  xseed2text_main.c
