PROJECT(mseed2text)
SET(MSEED2TEXT_VERSION_MAJOR 1)
SET(MSEED2TEXT_VERSION_MINOR 0)
SET(MSEED2TEXT_VERSION_PATCH 1)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/mseed2text_config.h.in
        ${CMAKE_CURRENT_BINARY_DIR}/mseed2text_config.h)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

SET(SRCS mseed2text_main.c)

ADD_EXECUTABLE(mseed2text ${SRCS})
TARGET_LINK_LIBRARIES(mseed2text mseed3-common)
add_test(mseed2text ${CMAKE_BINARY_DIR}/bin/mseed2text COMMAND mseed2text
        ${CMAKE_SOURCE_DIR}/share/reference_datasets/reference-baseline-record-sinusoid-steim2_EH-FDSN-Full.mseed -vvv)
INSTALL(TARGETS mseed2text
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ WORLD_EXECUTE WORLD_WRITE WORLD_READ
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
