PROJECT(mseed3-json)
SET(MSEED3JSON_VERSION_MAJOR 1)
SET(MSEED3JSON_VERSION_MINOR 0)
SET(MSEED3JSON_VERSION_PATCH 5)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/mseed3-json_config.h.in
        ${CMAKE_CURRENT_BINARY_DIR}/mseed3-json_config.h)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

SET(SRCS mseed3-json_main.c)

ADD_EXECUTABLE(mseed3-json ${SRCS})
TARGET_LINK_LIBRARIES(mseed3-json mseed3-common)
add_test(mseed3-json ${CMAKE_BINARY_DIR}/bin/mseed3-json COMMAND mseed3-json
        ${CMAKE_SOURCE_DIR}/share/reference_datasets/reference-baseline-record-sinusoid-steim2_EH-FDSN-Full.mseed -vvv)
IF (MSVC)
    SET(CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS} "/NODEFAULTLIBS:LIBCMT")
ENDIF (MSVC)

INSTALL(TARGETS mseed3-json
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ WORLD_EXECUTE WORLD_WRITE WORLD_READ
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
