PROJECT(mseed3-text)
SET(MSEED3TEXT_VERSION_MAJOR 1)
SET(MSEED3TEXT_VERSION_MINOR 0)
SET(MSEED3TEXT_VERSION_PATCH 5)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/mseed3-text_config.h.in
        ${CMAKE_CURRENT_BINARY_DIR}/mseed3-text_config.h)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

SET(SRCS mseed3-text_main.c)

ADD_EXECUTABLE(mseed3-text ${SRCS})
TARGET_LINK_LIBRARIES(mseed3-text mseed3-common)
add_test(mseed3-text ${CMAKE_BINARY_DIR}/bin/mseed3-text COMMAND mseed3-text
        ${CMAKE_SOURCE_DIR}/share/reference_datasets/reference-baseline-record-sinusoid-steim2_EH-FDSN-Full.mseed -vvv)
INSTALL(TARGETS mseed3-text
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ WORLD_EXECUTE WORLD_WRITE WORLD_READ
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
