SET(SRCS main.c)

ADD_EXECUTABLE(xseed2json ${SRCS})
TARGET_LINK_LIBRARIES(xseed2json xseed-common)
add_test(xseed2json ${CMAKE_BINARY_DIR}/bin/xseed2json COMMAND xseed2json
        ${CMAKE_SOURCE_DIR}/share/ref_datasets/reference-baseline-record-sinusoid-steim2_EH-FDSN-Full.xseed -vvv)
IF (MSVC)
    SET(CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS} "/NODEFAULTLIBS:LIBCMT")
ENDIF (MSVC)

INSTALL(TARGETS xseed2json
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ WORLD_EXECUTE WORLD_WRITE WORLD_READ
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
