PROJECT(xseed2json)
SET(XSEED2JSON_VERSION_MAJOR 1)
SET(XSEED2JSON_VERSION_MINOR 0)
SET(XSEED2JSON_VERSION_PATCH 2)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/xseed2json_config.h.in
        ${CMAKE_CURRENT_BINARY_DIR}/xseed2json_config.h)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

SET(SRCS xseed2json_main.c)

ADD_EXECUTABLE(xseed2json ${SRCS})
TARGET_LINK_LIBRARIES(xseed2json xseed-common)
add_test(xseed2json ${CMAKE_BINARY_DIR}/bin/xseed2json COMMAND xseed2json
        ${CMAKE_SOURCE_DIR}/share/reference_datasets/reference-baseline-record-sinusoid-steim2_EH-FDSN-Full.xseed -vvv)
IF (MSVC)
    SET(CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS} "/NODEFAULTLIBS:LIBCMT")
ENDIF (MSVC)

INSTALL(TARGETS xseed2json
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ WORLD_EXECUTE WORLD_WRITE WORLD_READ
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
